Fixing scroll overflow to #certifications

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -386,8 +386,7 @@ a:hover {
 }
 
 .certificates {
-    overflow: auto;
-    white-space: nowrap;
+    overflow-x: auto;
     padding: 1rem;
     display: flex;
     align-items: flex-start;
@@ -472,14 +471,13 @@ hr {
 .certi {
   display: inline-block;
   margin-right: 1.25rem;
-  width: 50%;
+  min-width: 45%;
 }
 
 .certi-img {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    flex-shrink: 0;
+    height: 100%;
     width: 100%;
-    max-width: 50vw;
     border-radius: 10px;
 }
 
